@@ -55,9 +55,15 @@
 <p><strong>Version 1.6.0</strong></p>
 <ul class="simple">
 <li>Made the parsing of unique UMIs gene by gene and parallel</li>
+<li>AdjacentBi is now the default method for UMI counting</li>
 <li>Made the trimming function output the trimmed R2 in BAM format with the barcode and UMI</li>
-<li>Made the mapping function works with a BAM file (latest STAR release)</li>
+<li>Made the mapping function works with a BAM file as input (latest STAR release)</li>
+<li>Made the annotation function parallel</li>
+<li>Made the quality step parallel</li>
 <li>Improvements in speed and memory (constant memory use)</li>
+<li>The STAR genome loading strategy can be now set</li>
+<li>Added an affinity based method to cluster UMIs</li>
+<li>Added option to set the STAR BAM sort memory limit</li>
 </ul>
 <p><strong>Version 1.5.1</strong></p>
 <ul class="simple">
