@@ -126,6 +126,8 @@ these arrays is fully randomised.</p>
                         <span class="o">[</span>--demultiplexing-multiple-hits-keep-one<span class="o">]</span>
                         <span class="o">[</span>--demultiplexing-trim-sequences <span class="o">[</span>INT<span class="o">]]</span>
                         <span class="o">[</span>--homopolymer-mismatches <span class="o">[</span>INT<span class="o">]]]</span>
+                        <span class="o">[</span>--star-genome-loading <span class="o">[</span>STRING<span class="o">]]</span>
+                        <span class="o">[</span>--star-sort-mem-limit STAR_SORT_MEM_LIMIT
                         <span class="o">[</span>--version<span class="o">]</span>
                         fastq_file_fw fastq_file_rv
 </pre></div>
