@@ -1,1 +1,1 @@
-Search.setIndex({envversion:46,filenames:["changes","contact","example","index","installation","intro","license","manual"],objects:{},objnames:{},objtypes:{},terms:{"1000l6":7,"1000l7":7,"150bp":7,"75bp":7,"__no_featur":7,"_log":2,"default":[0,4,5,7],"export":4,"function":0,"import":[0,4],"int":[0,7],"long":5,"new":0,abov:[5,6],accordingli:7,account:0,action:6,activ:[4,7],adaptor:0,add:0,adjac:7,adjacentbi:7,adjust:[0,5,7],adjust_matrix_coordiant:0,adjust_matrix_coordin:0,after:[0,4,5,7],again:0,against:7,aggreg:7,algorithm:[0,7],align:[0,7],all:[4,5,6,7],allow:[0,7],alreadi:4,also:[0,5,7],altern:4,amazon:0,ambigu:[0,2,7],amplif:7,anaconda2:4,anaconda:4,analysi:[0,5],analyz:5,ani:[5,6],ann:2,annot:[0,2,5,7],anti:0,anyth:4,api:0,append:[0,4],appl:4,archiv:4,argpars:0,argument:7,aris:6,arrai:[5,7],artifact:[5,7],ask:4,associ:6,attach:0,author:[1,6,7],awar:0,back:[0,4],bam:0,barcod:[0,2,5,7],base:[0,5,7],bash:[2,4],bash_profil:4,basic:[0,5],batch:7,bcl:0,bed:[0,5,7],been:[4,5],befor:0,better:0,big:7,bigger:7,bin:[2,4,7],binari:[0,7],bit:[0,4],bowti:0,bug:0,build:[0,4],bump:0,bzip:[0,5],call:[0,4],can:[0,4,5,7],captur:0,caus:0,cell:[5,7],charg:6,check:[0,4,5],choos:4,chose:5,claim:6,clang:4,clean:[0,7],clip:[0,7],clone:4,cluster:[0,7],code:[0,7],color:0,column:[0,5],com:[4,5],combin:7,command:[0,4],comment:0,compat:4,comput:[0,4,7],conda:4,condit:6,configur:0,connect:6,constant:0,cont:2,contain:[0,5,7],contamim:5,contamin:[2,7],content:[0,3,5,7],continuum:4,contract:6,convent:0,convert:0,convertensembltonam:0,coordin:[0,5,7],copi:6,copyright:6,correct:5,correctli:5,correspond:[0,7],count:[0,5,7],counttri:0,coupl:4,creat:[0,4],createdataset:0,ctt:0,curl:4,current:4,curv:[0,7],custom:4,cutadapt:0,damag:6,data:[0,5,7],dataset:[0,5,7],datfa:0,deactiv:4,deal:6,debug:[0,7],defauldt:7,defin:[5,7],delet:0,demultiplex:[0,5,7],depend:[0,4,7],deprec:0,descript:[0,5,7],detail:5,detector:0,dict:0,differ:[0,7],direct:4,directli:4,directori:4,disabl:[0,7],discard:[0,5,7],distanc:7,distribut:6,distributiosn:0,doc:0,document:0,doe:[0,5],down:[5,7],download:4,due:[0,7],duplic:[0,7],dure:[4,7],each:[5,7],earlier:7,easi:5,echo:4,edit:4,editor:4,either:4,elev:4,emr:0,enabl:[0,7],end:[0,7],enough:5,ensembl:0,ensur:0,enter:4,environ:4,equal:7,error:0,etc:5,even:0,event:6,exchang:0,execut:[0,7],exit:7,exp:[0,2],experi:[0,2,7],expnam:[2,7],express:[0,6,7],extra:[0,7],fail:[0,5],fals:7,faster:0,fastq:[0,2,5,7],fastq_file_fw:7,fastq_file_rv:7,favourit:4,fernandez:[1,6,7],few:0,file:[0,2,5,6,7],filenam:0,filter:[0,2,5,7],filter_gene_type_matrix:0,find:0,findindex:0,first:[0,7],fit:6,fix:0,flag:[0,4],flank:7,folder:[0,2,5,7],follow:[2,4,5,6],format:[0,5,7],forward:0,found:7,frame:0,free:6,from:[0,4,6,7],full:5,fulli:7,furnish:6,gap:0,gcc:4,gene:[0,5,7],gene_id:0,gene_nam:0,gener:[0,4,5],genom:[5,7],get:5,gff:[5,7],git:4,github:[4,5],given:[0,5,7],good:5,grant:6,graphic:5,grcm38_86v2:2,group:5,grow:0,gtf:[2,5,7],gzip:[0,5],gzipe:0,hadoop:0,ham:7,handl:0,happen:0,hash:0,hat:4,have:[4,5,7],heatmap:0,help:[5,7],here:4,herebi:6,hiearach:0,hierarch:[0,7],highest:7,hit:7,holder:6,home:4,homopolym:[0,7],how:[0,4],howev:7,htseq:[0,2,5,7],http:[4,5],identifi:5,identinfi:5,imag:0,impli:6,improv:0,includ:[6,7],incorrect:0,increas:0,indentifi:7,index:[2,3,5,7],info:0,inform:[5,7],input:[0,5,7],instal:[0,3],instead:[0,7],institut:6,instruct:4,integ:7,integr:0,intermediari:7,intern:0,intersect:7,introduct:3,intron:[0,7],invers:[0,7],invert:0,invok:0,issu:0,iupac:7,jose:[1,6,7],json2scatt:0,json:[0,5],jul:4,just:4,karolisnka:6,keep:[0,5,7],kei:0,kept:[5,7],kimera:0,kind:6,kit:7,kmer:[0,7],kth:6,label:7,last:7,latest:0,leav:0,length:[0,5,7],levenshtein:7,liabil:6,liabl:6,librari:0,licens:[0,3],limit:[0,6],line:0,link:4,linux:4,list:[0,7],llvm:4,local:7,locat:[0,7],log:[0,2,4,5,7],logic:0,look:5,low:[5,7],low_memori:0,made:0,make:[0,4],mani:[0,5,7],manual:[0,3],map:[0,2,5,7],mapper:0,match:0,matrix:[0,5,7],max:[0,7],maximum:7,memori:0,merchant:6,merg:[0,6],merge_bcl:0,messag:[0,7],method:[0,5],metric:7,might:[4,7],min:[0,7],minimum:[5,7],minor:0,mismatch:7,miss:[0,7],missmatch:0,mit:6,mode:[0,7],modifi:[5,6],modul:3,modular:0,molecul:[0,5,7],molecular:[0,7],more:[0,5,7],mostli:5,mous:2,multimap:[0,7],multipl:[0,5,7],must:[4,7],naiv:[0,7],name:[0,2,4,5,7],navarro:[1,6,7],ncrna:2,neccessari:0,necessari:0,need:[0,4,5],newer:7,nomkl:4,non:[0,7],nonempti:7,noninfring:6,nonrna:2,normal:0,note:7,notic:6,now:[0,4],nucleotid:7,number:[0,4,5,7],obtain:[4,6,7],oct:4,offset:[0,7],old:0,onli:[0,5],optim:[0,5],option:[0,5,7],order:[5,7],origin:0,other:[0,6],otherwis:[6,7],out:[0,4,6],output:[0,2,4,5,7],overhang:7,packag:4,page:3,pair:0,parallel:0,paramet:[0,5,7],pars:0,particular:6,pass:[0,7],path:[4,7],pattern:0,pdf:5,percentag:7,percentil:0,perform:[0,4,7],permiss:[4,6],permit:6,person:6,phred:7,pip:[0,4],pipelin:[0,2],plot:0,plotter:0,point:0,polya:[0,5,7],polyc:[0,5,7],polyg:[0,5,7],polyn:[0,5,7],polyt:[0,5,7],portion:[0,6],posit:[0,5,7],post:0,pre:4,prefix:0,prepend:7,present:7,primari:0,print:[0,4],prior:0,process:[0,5,7],program:7,proper:0,provid:[5,6],publish:6,purpos:6,pypi:4,pysam:[0,4],python:[0,4],qa_stat:0,qual:7,qualiti:[0,5,7],random:7,randomis:7,rang:0,raw:[5,7],read:[0,2,5,7],read_1:7,read_2:7,readi:4,recommend:7,red:4,reduc:0,ref:[2,7],refactor:0,refer:[2,7],regestir:4,relat:[0,5],relax:0,releas:0,remov:[0,5,7],renam:0,replac:0,repo:4,repositori:[0,4],requir:[5,7],reserv:6,restor:0,restrict:[0,6],retriev:0,revers:[0,7],rewrit:0,right:6,rna:0,robust:[0,5],row:5,royal:6,rrna:[0,5],run:[0,2,4],sam:0,same:[0,5,7],sampl:7,saniti:5,satur:[0,7],scilifelab:[1,6,7],score:7,scratch:4,screen:7,script:[0,5],search:[3,7],see:[4,5,7],sell:6,sens:0,sequenc:[5,7],server:4,set:[0,2,5,7],setup:4,sever:7,shall:6,shell:4,shelv:0,shorter:7,should:7,show:[4,7],simpli:4,simplifi:0,singl:[5,7],size:[0,7],slide:0,slightli:[5,7],small:0,soft:[0,7],softclip:0,softwar:[0,6],some:[0,7],sort:0,sourc:4,spatial:3,spatialtranscriptomicsresearch:[4,5],specifi:[4,7],speed:[0,5],splice:[0,7],spot:[0,5,7],sqldict:0,st_pipelin:4,st_pipeline_run:[2,5,7],st_qa:0,stamp:0,star:[0,5,7],starindex:2,start:[0,7],stat:[0,5,7],stdata:0,stdataplott:0,step:[0,4,7],store:[0,7],stpipelin:[2,4],str:7,strand:[0,7],stream:5,strech:0,stretch:7,strict:7,string:7,stringdoc:0,structur:0,stuff:0,stupid:0,sub:7,subglob:7,subject:6,sublicens:6,substanti:6,support:0,sure:[0,4],system:[0,4,7],taggd:[0,5,7],take:0,technolog:6,tell:4,temp:[0,7],templat:[0,7],temporari:7,termin:0,test:0,text:4,than:7,thei:7,them:7,thi:[2,4,5,6,7],thread:7,time:[0,4,7],tmp:0,togeth:7,tool:[0,5,7],top:0,tort:6,total:7,transcript:[5,7],transcriptom:3,tree:0,trim:[0,5,7],trimmng:7,tupl:7,turn:7,two:[0,7],txt:2,type:[0,4,5,7],typo:0,umi:[0,5,7],unabl:7,unalign:7,union:7,uniqu:[0,5,7],unit:0,updat:0,upgrad:0,usag:7,user:[0,4,5],valid:5,valu:[0,5],variant:7,verbos:[2,7],veri:5,version:[0,2,4,5,7],virtual:4,want:[4,7],warranti:6,well:[0,5],wget:4,what:[5,7],when:[0,4,7],where:[4,7],whether:6,which:4,whole:0,whom:6,whose:7,window:0,wise:7,without:[0,6],work:0,workflow:[0,5],workflow_extend:5,would:0,write:[4,7],wsnnwsnnv:7,www:4,x86_64:4,you:[4,5,7],your:4,your_exp_nam:2,your_experiment_fold:2,your_id:2,your_run:2},titles:["Changes","Contact","Examples","Welcome to ST Pipeline's documentation!","Installing the Spatial Transcriptomics pipeline","Introduction","License","Manual"],titleterms:{chang:0,contact:1,document:3,exampl:2,indic:3,instal:4,introduct:5,licens:6,manual:7,pipelin:[3,4],spatial:4,tabl:3,transcriptom:4,welcom:3}})
+Search.setIndex({envversion:46,filenames:["changes","contact","example","index","installation","intro","license","manual"],objects:{},objnames:{},objtypes:{},terms:{"1000l6":7,"1000l7":7,"150bp":7,"75bp":7,"__no_featur":7,"_log":2,"default":[0,4,5,7],"export":4,"function":0,"import":[0,4],"int":[0,7],"long":5,"new":0,abov:[5,6],accordingli:7,account:0,action:6,activ:[4,7],adaptor:0,add:0,adjac:7,adjacentbi:[0,7],adjust:[0,5,7],adjust_matrix_coordiant:0,adjust_matrix_coordin:0,affin:0,after:[0,4,5,7],again:0,against:7,aggreg:7,algorithm:[0,7],align:[0,7],all:[4,5,6,7],allow:[0,7],alreadi:4,also:[0,5,7],altern:4,amazon:0,ambigu:[0,2,7],amplif:7,anaconda2:4,anaconda:4,analysi:[0,5],analyz:5,ani:[5,6],ann:2,annot:[0,2,5,7],anti:0,anyth:4,api:0,append:[0,4],appl:4,archiv:4,argpars:0,argument:7,aris:6,arrai:[5,7],artifact:[5,7],ask:4,associ:6,attach:0,author:[1,6,7],awar:0,back:[0,4],bam:0,barcod:[0,2,5,7],base:[0,5,7],bash:[2,4],bash_profil:4,basic:[0,5],batch:7,bcl:0,bed:[0,5,7],been:[4,5],befor:0,better:0,big:7,bigger:7,bin:[2,4,7],binari:[0,7],bit:[0,4],bowti:0,bug:0,build:[0,4],bump:0,bzip:[0,5],call:[0,4],can:[0,4,5,7],captur:0,caus:0,cell:[5,7],charg:6,check:[0,4,5],choos:4,chose:5,claim:6,clang:4,clean:[0,7],clip:[0,7],clone:4,cluster:[0,7],code:[0,7],color:0,column:[0,5],com:[4,5],combin:7,command:[0,4],comment:0,compat:4,comput:[0,4,7],conda:4,condit:6,configur:0,connect:6,constant:0,cont:2,contain:[0,5,7],contamim:5,contamin:[2,7],content:[0,3,5,7],continuum:4,contract:6,convent:0,convert:0,convertensembltonam:0,coordin:[0,5,7],copi:6,copyright:6,correct:5,correctli:5,correspond:[0,7],count:[0,5,7],counttri:0,coupl:4,creat:[0,4],createdataset:0,ctt:0,curl:4,current:4,curv:[0,7],custom:4,cutadapt:0,damag:6,data:[0,5,7],dataset:[0,5,7],datfa:0,deactiv:4,deal:6,debug:[0,7],defauldt:7,defin:[5,7],delet:0,demultiplex:[0,5,7],depend:[0,4,7],deprec:0,descript:[0,5,7],detail:5,detector:0,dict:0,differ:[0,7],direct:4,directli:4,directori:4,disabl:[0,7],discard:[0,5,7],distanc:7,distribut:6,distributiosn:0,doc:0,document:0,doe:[0,5],down:[5,7],download:4,due:[0,7],duplic:[0,7],dure:[4,7],each:[5,7],earlier:7,easi:5,echo:4,edit:4,editor:4,either:4,elev:4,emr:0,enabl:[0,7],end:[0,7],enough:5,ensembl:0,ensur:0,enter:4,environ:4,equal:7,error:0,etc:5,even:0,event:6,exchang:0,execut:[0,7],exit:7,exp:[0,2],experi:[0,2,7],expnam:[2,7],express:[0,6,7],extra:[0,7],fail:[0,5],fals:7,faster:0,fastq:[0,2,5,7],fastq_file_fw:7,fastq_file_rv:7,favourit:4,fernandez:[1,6,7],few:0,file:[0,2,5,6,7],filenam:0,filter:[0,2,5,7],filter_gene_type_matrix:0,find:0,findindex:0,first:[0,7],fit:6,fix:0,flag:[0,4],flank:7,folder:[0,2,5,7],follow:[2,4,5,6],format:[0,5,7],forward:0,found:7,frame:0,free:6,from:[0,4,6,7],full:5,fulli:7,furnish:6,gap:0,gcc:4,gene:[0,5,7],gene_id:0,gene_nam:0,gener:[0,4,5],genom:[0,5,7],get:5,gff:[5,7],git:4,github:[4,5],given:[0,5,7],good:5,grant:6,graphic:5,grcm38_86v2:2,group:5,grow:0,gtf:[2,5,7],gzip:[0,5],gzipe:0,hadoop:0,ham:7,handl:0,happen:0,hash:0,hat:4,have:[4,5,7],heatmap:0,help:[5,7],here:4,herebi:6,hiearach:0,hierarch:[0,7],highest:7,hit:7,holder:6,home:4,homopolym:[0,7],how:[0,4],howev:7,htseq:[0,2,5,7],http:[4,5],identifi:5,identinfi:5,imag:0,impli:6,improv:0,includ:[6,7],incorrect:0,increas:0,indentifi:7,index:[2,3,5,7],info:0,inform:[5,7],input:[0,5,7],instal:[0,3],instead:[0,7],institut:6,instruct:4,integ:7,integr:0,intermediari:7,intern:0,intersect:7,introduct:3,intron:[0,7],invers:[0,7],invert:0,invok:0,issu:0,iupac:7,jose:[1,6,7],json2scatt:0,json:[0,5],jul:4,just:4,karolisnka:6,keep:[0,5,7],kei:0,kept:[5,7],kimera:0,kind:6,kit:7,kmer:[0,7],kth:6,label:7,last:7,latest:0,leav:0,length:[0,5,7],levenshtein:7,liabil:6,liabl:6,librari:0,licens:[0,3],limit:[0,6,7],line:0,link:4,linux:4,list:[0,7],llvm:4,load:[0,7],local:7,locat:[0,7],log:[0,2,4,5,7],logic:0,look:5,low:[5,7],low_memori:0,made:0,make:[0,4],mani:[0,5,7],manual:[0,3],map:[0,2,5,7],mapper:0,match:0,matrix:[0,5,7],max:[0,7],maximum:7,mem:7,memori:0,merchant:6,merg:[0,6],merge_bcl:0,messag:[0,7],method:[0,5],metric:7,might:[4,7],min:[0,7],minimum:[5,7],minor:0,mismatch:7,miss:[0,7],missmatch:0,mit:6,mode:[0,7],modifi:[5,6],modul:3,modular:0,molecul:[0,5,7],molecular:[0,7],more:[0,5,7],mostli:5,mous:2,multimap:[0,7],multipl:[0,5,7],must:[4,7],naiv:[0,7],name:[0,2,4,5,7],navarro:[1,6,7],ncrna:2,neccessari:0,necessari:0,need:[0,4,5],newer:7,nomkl:4,non:[0,7],nonempti:7,noninfring:6,nonrna:2,normal:0,note:7,notic:6,now:[0,4],nucleotid:7,number:[0,4,5,7],obtain:[4,6,7],oct:4,offset:[0,7],old:0,onli:[0,5],optim:[0,5],option:[0,5,7],order:[5,7],origin:0,other:[0,6],otherwis:[6,7],out:[0,4,6],output:[0,2,4,5,7],overhang:7,packag:4,page:3,pair:0,parallel:0,paramet:[0,5,7],pars:0,particular:6,pass:[0,7],path:[4,7],pattern:0,pdf:5,percentag:7,percentil:0,perform:[0,4,7],permiss:[4,6],permit:6,person:6,phred:7,pip:[0,4],pipelin:[0,2],plot:0,plotter:0,point:0,polya:[0,5,7],polyc:[0,5,7],polyg:[0,5,7],polyn:[0,5,7],polyt:[0,5,7],portion:[0,6],posit:[0,5,7],post:0,pre:4,prefix:0,prepend:7,present:7,primari:0,print:[0,4],prior:0,process:[0,5,7],program:7,proper:0,provid:[5,6],publish:6,purpos:6,pypi:4,pysam:[0,4],python:[0,4],qa_stat:0,qual:7,qualiti:[0,5,7],random:7,randomis:7,rang:0,raw:[5,7],read:[0,2,5,7],read_1:7,read_2:7,readi:4,recommend:7,red:4,reduc:0,ref:[2,7],refactor:0,refer:[2,7],regestir:4,relat:[0,5],relax:0,releas:0,remov:[0,5,7],renam:0,replac:0,repo:4,repositori:[0,4],requir:[5,7],reserv:6,restor:0,restrict:[0,6],retriev:0,revers:[0,7],rewrit:0,right:6,rna:0,robust:[0,5],row:5,royal:6,rrna:[0,5],run:[0,2,4],sam:0,same:[0,5,7],sampl:7,saniti:5,satur:[0,7],scilifelab:[1,6,7],score:7,scratch:4,screen:7,script:[0,5],search:[3,7],see:[4,5,7],sell:6,sens:0,sequenc:[5,7],server:4,set:[0,2,5,7],setup:4,sever:7,shall:6,shell:4,shelv:0,shorter:7,should:7,show:[4,7],simpli:4,simplifi:0,singl:[5,7],size:[0,7],slide:0,slightli:[5,7],small:0,soft:[0,7],softclip:0,softwar:[0,6],some:[0,7],sort:[0,7],sourc:4,spatial:3,spatialtranscriptomicsresearch:[4,5],specifi:[4,7],speed:[0,5],splice:[0,7],spot:[0,5,7],sqldict:0,st_pipelin:4,st_pipeline_run:[2,5,7],st_qa:0,stamp:0,star:[0,5,7],star_sort_mem_limit:7,starindex:2,start:[0,7],stat:[0,5,7],stdata:0,stdataplott:0,step:[0,4,7],store:[0,7],stpipelin:[2,4],str:7,strand:[0,7],strategi:0,stream:5,strech:0,stretch:7,strict:7,string:7,stringdoc:0,structur:0,stuff:0,stupid:0,sub:7,subglob:7,subject:6,sublicens:6,substanti:6,support:0,sure:[0,4],system:[0,4,7],taggd:[0,5,7],take:0,technolog:6,tell:4,temp:[0,7],templat:[0,7],temporari:7,termin:0,test:0,text:4,than:7,thei:7,them:7,thi:[2,4,5,6,7],thread:7,time:[0,4,7],tmp:0,togeth:7,tool:[0,5,7],top:0,tort:6,total:7,transcript:[5,7],transcriptom:3,tree:0,trim:[0,5,7],trimmng:7,tupl:7,turn:7,two:[0,7],txt:2,type:[0,4,5,7],typo:0,umi:[0,5,7],unabl:7,unalign:7,union:7,uniqu:[0,5,7],unit:0,updat:0,upgrad:0,usag:7,user:[0,4,5],valid:5,valu:[0,5],variant:7,verbos:[2,7],veri:5,version:[0,2,4,5,7],virtual:4,want:[4,7],warranti:6,well:[0,5],wget:4,what:[5,7],when:[0,4,7],where:[4,7],whether:6,which:4,whole:0,whom:6,whose:7,window:0,wise:7,without:[0,6],work:0,workflow:[0,5],workflow_extend:5,would:0,write:[4,7],wsnnwsnnv:7,www:4,x86_64:4,you:[4,5,7],your:4,your_exp_nam:2,your_experiment_fold:2,your_id:2,your_run:2},titles:["Changes","Contact","Examples","Welcome to ST Pipeline's documentation!","Installing the Spatial Transcriptomics pipeline","Introduction","License","Manual"],titleterms:{chang:0,contact:1,document:3,exampl:2,indic:3,instal:4,introduct:5,licens:6,manual:7,pipelin:[3,4],spatial:4,tabl:3,transcriptom:4,welcom:3}})
