@@ -444,6 +444,7 @@ Version 1.6.0
 * Made the trimming function output the trimmed R2 in BAM format with the barcode and UMI
 * Made the mapping function works with a BAM file as input (latest STAR release)
 * Made the annotation function parallel
+* Made the quality step parallel
 * Improvements in speed and memory (constant memory use)
 * The STAR genome loading strategy can be now set
 * Added an affinity based method to cluster UMIs
